# swagger/chainquery.yaml
@@ -97,31 +97,6 @@ paths:
             type: string
           x-oad-type: parameter
     x-oad-type: operation
-  /autoupdate:
-    post:
-      operationId: AutoUpdate
-      summary: 'auto updates the application with the latest release based on TravisCI webhook'
-      description: 'takes a webhook as defined by https://docs.travis-ci.com/user/notifications/#Webhooks-Delivery-Format, validates the public key, chooses whether or not update the application. If so it shuts down the api, downloads the latest release from https://github.com/lbryio/chainquery/releases, replaces the binary and starts the api again.'
-      consumes:
-        - application/x-www-form-urlencoded
-      schemes:
-        - http
-      responses:
-        '200':
-          description: 'sucessfully recieved and validated.'
-          x-oad-type: response
-      parameters:
-        -
-          name: payload
-          in: body
-          required: true
-          schema:
-            x-oad-type: object
-            type: object
-            title: 'Travis webhook'
-            description: 'formatted as https://docs.travis-ci.com/user/notifications/#Webhooks-Delivery-Format'
-          x-oad-type: parameter
-    x-oad-type: operation
 parameters:
   address:
     name: LbryAddress
